--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Bei der Arbeit - Oon töissä - At work - På jobbet</h1>
         <h2>Repository for SailfishOS application &quot;At work&quot;</h2>
         <a href="https://github.com/Rikujolla/oontoissa" class="button"><small>View project on</small> GitHub</a>
-        <br>
+        <div></div>
         <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
       </div>
     </header>
