--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
             <small>Download</small>
             .tar.gz file
           </a>
+        <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
 
           <p class="repo-owner"><a href="https://github.com/Rikujolla/oontoissa"></a> is maintained by <a href="https://github.com/Rikujolla">Rikujolla</a>.</p>
 
