--- a/index.html
+++ b/index.html
@@ -22,9 +22,6 @@
         <h1>Bei der Arbeit - Oon töissä - At work - På jobbet</h1>
         <h2>Repository for SailfishOS application &quot;At work&quot;</h2>
         <a href="https://github.com/Rikujolla/oontoissa" class="button"><small>View project on</small> GitHub</a>
-        <h2>Donate <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
-</h2>
-        <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
       </div>
     </header>
 
@@ -34,18 +31,14 @@
           <!---
           <h3>
 <a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
 <p>This page generator is the way to create pages for your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
 -->
-
-<h3><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
-</h3>
 <h3>
 <a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Idea</h3>
 <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
 <p>The idea of the software is to support your daily working times automatically based on sensor data. You create areas and the Jolla detects whether you are inside the boundary or galloping freely elsewhere.</p>
 <h3>Donations</h3>
-<p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr At work project</a>
+<p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr <h3>"At work"</h3> project</a>
 </p>
 <!--
 
