--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa" class="button">Flattr this project</a>
 <p>The idea of the software is to support your daily working times automatically based on sensor data. You create areas and the Jolla detects whether you are inside the boundary or galloping freely elsewhere.</p>
 <h3>Donations</h3>
-<p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr <h3>"At work"</h3> project</a>
+<p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr <b>"At work"</b> project</a>
 </p>
 <!--
 
