--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
 <h3>Donations</h3>
 <p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr <b>"At work"</b> project</a>
 </p>
+<form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+<input type="hidden" name="cmd" value="_s-xclick">
+<input type="hidden" name="hosted_button_id" value="PATVQKQEBBM56">
+<input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donate_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+<img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+</form>
+
 <!--
 
 <h3>
