--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <body>
     <header>
       <div class="inner">
-        <h1>Bei der Arbeit - Oon töissä - At work - På jobbet</h1>
+        <h2>Bei der Arbeit - At work - Oon töissä - Au travail - A lavoro - På jobbet - 上班中</h2>
         <h2>Repository for SailfishOS application &quot;At work&quot;</h2>
         <a href="https://github.com/Rikujolla/oontoissa" class="button"><small>View project on</small> GitHub</a>
       </div>
