--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <h3>Donations</h3>
 <p><a href="https://flattr.com/submit/auto?user_id=rikujolla&url=http%3A%2F%2Frikujolla.github.io/oontoissa">Flattr <b>"At work"</b> project</a>
 </p>
+<p>
+<script id='fb2jugy'>(function(i){var f,s=document.getElementById(i);f=document.createElement('iframe');f.src='//api.flattr.com/button/view/?uid=rikujolla&button=compact&url='+encodeURIComponent(document.URL);f.title='Flattr';f.height=20;f.width=110;f.style.borderWidth=0;s.parentNode.insertBefore(f,s);})('fb2jugy');</script>
+</p>
 <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
 <input type="hidden" name="cmd" value="_s-xclick">
 <input type="hidden" name="hosted_button_id" value="PATVQKQEBBM56">
